--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
-    "joi": "^17.4.0"
+    "joi": "^17.4.0",
+    "winston": "^3.3.3"
   }
 }
