--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-status": "^1.5.0",
     "joi": "^17.4.0",
     "morgan": "^1.10.0",
+    "shopify-api-node": "^3.6.12",
     "winston": "^3.3.3"
   }
 }
