Add extra comments

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,24 @@
 # Port number
 PORT=3000
+
+# Personalization Fee Product ID on Shopify
+PERS_FEE_ID = 123456789012
+
+# Message added after editing order 
+PERS_FEE_EDIT_MSG = "Personalization Fee quantity updated"
+
+# Use development store private app credentials
+DEV_STORE = true
+
+# Webhook Integrity Secret
+WEBHOOK_SECRET = 64tOt9IEGU5P82g5WJyOB29Qks2n27ZWefZ41G0mTzzGPV9gQf0YAVWcF4y
+
+# Prod Shopify Private App Credentials
+SHOP = your-store.myshopify.com
+API_KEY = 8Pb5BR6cQwCL0pyXkQgAvcemXE4cARMXuW
+API_PASSWD = shppa_YNOFjhNDJ3PZuc0wWCHNa96pj4gc6agejo
+
+# Dev Shopify Private App Credentials (only required if DEV_STORE is set to true)
+DEV_SHOP = your-store-dev.myshopify.com
+DEV_API_KEY = awef34g6cQwCL0pyXkQgAvcemXE4cARMXuW
+DEV_API_PASSWD = shppa_fasd5bsf5tZuc0wWCHNa96pj4gc6agejo
