Add additional webhook registration and deletion logic

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Port number
 PORT=3000
 
+# Host URL
+HOST = https://test.ngrok.io
+
 # Personalization Fee Product ID on Shopify
 PERS_FEE_ID = 123456789012
 
@@ -10,8 +13,11 @@ PERS_FEE_EDIT_MSG = "Personalization Fee quantity updated"
 # Use development store private app credentials
 DEV_STORE = true
 
-# Webhook Integrity Secret
-WEBHOOK_SECRET = 64tOt9IEGU5P82g5WJyOB29Qks2n27ZWefZ41G0mTzzGPV9gQf0YAVWcF4y
+# Webhook Integrity Secret (for prod webhook)
+WEBHOOK_SECRET = shpss_wWCHNa96pj4gc6CL0pyXkQgAvcemXE4cARMXuW
+
+# Webhook Integrity Secret (for dev webhook)
+DEV_WEBHOOK_SECRET = shpss_8aer46fds678CL0pyXkQgAvcemXE4cARMXuW
 
 # Prod Shopify Private App Credentials
 SHOP = your-store.myshopify.com
