--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "pm2-runtime start ecosystem.config.json -- --no-daemon"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "http-status": "^1.5.0",
     "joi": "^17.4.0",
     "morgan": "^1.10.0",
+    "pm2": "^5.1.0",
     "shopify-api-node": "^3.6.12",
     "winston": "^3.3.3"
   }
