--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@sentry/node": "^6.7.1",
+    "axios": "^0.24.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
@@ -20,6 +21,7 @@
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
     "joi": "^17.4.0",
+    "js2xmlparser": "^4.0.2",
     "morgan": "^1.10.0",
     "pm2": "^5.1.0",
     "shopify-api-node": "^3.6.12",
