Use separate .env files for dev and prod

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Environment the app is running in: production or development
+NODE_ENV=development
+
 # Port number
 PORT=3000
 
@@ -10,21 +13,15 @@ PERS_FEE_ID = 123456789012
 # Message added after editing order 
 PERS_FEE_EDIT_MSG = "Personalization Fee quantity updated"
 
-# Use development store private app credentials
-DEV_STORE = true
-
-# Webhook Integrity Secret (for prod webhook)
+# Webhook Integrity Secret
 WEBHOOK_SECRET = shpss_wWCHNa96pj4gc6CL0pyXkQgAvcemXE4cARMXuW
-
-# Webhook Integrity Secret (for dev webhook)
-DEV_WEBHOOK_SECRET = shpss_8aer46fds678CL0pyXkQgAvcemXE4cARMXuW
 
 # Prod Shopify Private App Credentials
 SHOP = your-store.myshopify.com
 API_KEY = 8Pb5BR6cQwCL0pyXkQgAvcemXE4cARMXuW
 API_PASSWD = shppa_YNOFjhNDJ3PZuc0wWCHNa96pj4gc6agejo
 
-# Dev Shopify Private App Credentials (only required if DEV_STORE is set to true)
-DEV_SHOP = your-store-dev.myshopify.com
-DEV_API_KEY = awef34g6cQwCL0pyXkQgAvcemXE4cARMXuW
-DEV_API_PASSWD = shppa_fasd5bsf5tZuc0wWCHNa96pj4gc6agejo
+FC_ORDER_INPUT_KEY = abcd12345
+
+FC_GET_ORDER_URL=https://www.example.com/retrieve-order
+FC_SEND_ORDER_URL=http://www.example.com/post-order
