--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
+    "encodeurl": "^1.0.2",
     "env-cmd": "^10.1.0",
     "envalid": "^7.2.2",
     "express": "^4.17.1",
