Change prod start script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "env-cmd -f ./.env.dev nodemon src/index.js",
-    "start": "pm2 start ecosystem.config.json -- --no-daemon && pm2 logs"
+    "start": "pm2-runtime start ecosystem.config.js"
   },
   "keywords": [],
   "author": "",
